<resources>
    <string name="versionCode">&versionCode;</string>
    <string name="app_name">&app_name;</string>
    <string name="description">&app_name; Version &versionCode;</string>
    <string name="react_label">Stop</string>
    <string name="start_label">Start</string>
    <string name="wait_label">Wait</string>
    <string name="elapsed_label">Elapsed</string>
    <string name="rungate_label">Run:Gate</string>
    <string name="enter_label">Enter</string>
    <string name="exit_label">Exit</string>
    <string name="difference_label">Gap</string>
    <string name="eventtiming_label">Gate Timing of switches or photoresistors</string>
    <string name="visible_label">Visible timing display in real time</string>
    <string name="nothingtodo_label">No timings recorded.</string>
    <string name="completed_label">Timing\nCompleted</string>
    <string name="list">List timings</string>
    <string name="save">Save timings as CVS file</string>
    <string name="stop">Stop</string>
    <string name="timerset">Number of gates</string>
    <string name="delete">Delete timings</string>
    <string name="pause">Pause</string>
    <string name="time">Time</string>
    <string name="changeNumberofGates">Change number of gates</string>
    <string name="changeNumberofGates_text">"\nChanging the number of gates will delete previous timings from list.\n\nOK to continue with change."</string>
    <string name="sounddetect">Detection level</string>
    <string name="setDetectLevel">Set detection level</string>
    <string name="calibration">Calibration</string>
    <string name="calibrate">Calibration - Gates:</string>
    <string name="calibrate_text">\nClose all gates, illuminate all photoresistors.</string>
    <string name="calibratingExplanation">\nCalibration is required before timing can be performed. A gate can be a single switch or photoresistor.\n\nClose all gates (illuminate all photoresistors), wait for calibration to finish.\n\nTo change the number of gates use menu item:</string>
    <string name="recalibrate_text">\nCalibration requires all gates closed (i.e. all photoresistors maximally illuminated).</string>
    <string name="detectingExplanation">\nPass object through each gate (photoresistor)</string>
    <string name="detectingResults">\nDetection level results:</string>
    <string name="detectingResultsExplanation">\nDetection level results explanation:</string>
    <string name="calibrationfailed">Calibration failed - Level:</string>
    <string name="calibratedvolume">Calibrated at volume power level: </string>
    <string name="calibrating">Calibrating volume power level for gates.</string>
    <string name="detectingGates">Detection - Gates:</string>
    <string name="recalibrate">\n\nCalibration and gate detection required.\n\nTo start, use menu item:</string>
    <string name="detectionLevel">\n\nDetection gate levels at: </string>
    <string name="detectionLevelFailed">Detection failed - Gates:</string>
    <string name="detectionLevel_text">Please define the number of gates, then pass the object to be timed through each gate.\n\nCANCEL to use last known gate level settings.\n\nOK to start gate level detection.</string>
    <string name="gatesDetected">Gate levels detected: </string>
    <string name="about">About</string>
    <string name="about_text">&app_name; Version &versionCode;\nmeasures the time gates\nare entered and exited.\n\nMenu choices are:</string>
    <string name="restore">Restore default settings</string>
    <string name="savefilename">Save filename</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deletetimes">Delete times - cannot be undone.</string>
    <string name="deleterun">Delete times </string>
    <string name="timerdelay">Time delay between gates</string>
    <string name="timerwait">Time maximum wait for a gate</string>
    <string name="deleted">Times deleted</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="airplanemode">Please turn airplane mode settings ON manually. Phone calls, etc. interfere with timings.\n\nCANCEL continues with Airplane mode OFF.\n\nOK opens Setting > Airplane mode.</string>
    <string name="connectHeadSetFailed">GateTiming failed to find gate circuit.</string>
    <string name="connectHeadSetFailed_text">GateTiming requires gate circuit (see website) headset connection.\n\nCancel continues, no timings possible.\n\nOK and connect gate circuit continues with timings.</string>
    <string name="noheadsetcircuit_title">No headset circuit found.</string>
    <string name="noheadsetcircuit_text">&app_name; times objects moving through gates by the circuit at right connected to the headset as in the below photo. The circuit detects an object blocking illumination on the photoresistor; without the circuit, &app_name; has no functionality, no timing can be done.\n\nA complete description of the circuit and the &app_name; app can be found at the website listed at bottom.</string>
    <string name="Retry">RETRY</string>
    <string name="Ignore">IGNORE</string>
    <string name="repeat">Repeat run multiple times.</string>
    <string name="repeat_one">Repeat run one time.</string>
    <string name="timingsExceeded">Number of timings exceeded.</string>
    <string name="timingsExceeded_text">Save current timings to CVS file, delete current timings, and continue.</string>
    <string name="audioLoss">GateTiming - Audio lost to another application.</string>
    <string name="calibrationlow">Calibration low - Level:</string>
    <string name="calibratecircuit_text">\nCheck that each photoresistor is connected and illuminated.\n\n\nCANCEL to use last known calibration level.\n\nOK to restart calibration.</string>
    <string name="calibratelow_text">\nPossible fixes:\na) Increase illumination at photoresistors,\nb) Increase volume limit setting for media &amp; music,\nc) Match light wavelength to photoresistor.\n\n\nCONTINUE to use this calibration level.\n\nCANCEL to use last known calibration level.\n\nOK to restart calibration.</string>
    <string name="record_audio_disabled_title">Record Audio Disabled</string>
    <string name="record_audio_disabled_text">Record Audio permission is required but now disabled.\n\nEither manually enable by:\n\nSettings > Apps > GateTiming > Permissions > Microphone\n\nbefore opening &app_name; or uninstall &app_name; and reinstall.</string>
    <string name="record_audio_rationale_title">Allow Record Audio</string>
    <string name="record_audio_rationale_text">&app_name; works by outputting audio through the timing circuit and recording the audio to detect changes when an object enters or exits a gate.\n\nAllow Record Audio is required for &app_name; to continue.</string>
    <string name="write_external_storage_rationale_title">Allow Access files</string>
    <string name="write_external_storage_rationale_text">Allow &app_name; to access photos, media, and files on your device in order to save timing results to a CVS file.\n\nDeny and &app_name; will function without CVS file saving.</string>
    <string name="write_external_storage_disabled_text">File Storage Access permission is now disabled.\n\nEither manually enable by:\n\nSettings > Apps > GateTiming > Permissions > Storage\n\nbefore opening &app_name; or uninstall &app_name; and reinstall.</string>
    <string name="write_external_storage_disabled_title">Write Storage Access Disabled</string>
    <string name="is_terminating">&app_name; will terminate</string>
    <string name="no_showsetup">Do not show Setup again</string>
    <string name="closesetup">CLOSE Setup</string>
    <string name="setup_welcome_text">START to setup your device for &app_name;.\n\n&app_name; times objects moving through gates by the circuit at right connected to the headset. This circuit is absolutely necessary.\n\nA complete description of the circuit and the &app_name; app can be found at the website listed below.\n\nFor &app_name; to work, Setup needs to check the following:</string>
    <string name="setup_finish_text">\nCLOSE SETUP to continue &app_name; for these final steps.\n\n1) Calibrate the circuit by automatic adjusting of the speaker volume to measure the illumination of all photoresistors (that gates are closed). All photoresistors in the circuit must be illuminated.\n\n2) Test each gate individually to determine when gates have been entered or exited.\n\nSetup final status:</string>
    <string name="setup_finish_title">Setup finished.</string>
    <string name="writeExternalStorage_no_permission">&app_name; is not allowed to access files on your device.</string>
    <string name="setup_title">Setup</string>
    <string name="setup_checkheadset">Headset circuit connected.</string>
    <string name="setup_checkairplanemode">Airplane mode ON.</string>
    <string name="setup_checkrecord">Audio record allowed.</string>
    <string name="setup_checkstorage">Write storage access allowed.</string>
    <string name="setup_headset_text">RETRY after connecting headset circuit.\n\nIGNORE will continue but no timings possible.\n\n&app_name; times objects moving through gates by the circuit at right connected to the headset as in the below photo. The circuit detects an object blocking illumination on the photoresistor; without the circuit, &app_name; has no functionality, no timing can be done.\n\nA complete description of the circuit and the &app_name; app can be found at the website listed at bottom.</string>
    <string name="setup_airplanemode_title">Airplane mode is OFF.</string>
    <string name="setup_airplanemode_text">Airplane mode should be ON to avoid interference with timings by phone calls, etc.\n\nRETRY to turn Airplane Mode ON.\n\nIGNORE will continue with Airplane Mode OFF.</string>
    <string name="setup_recordpermission_title">Allow Audio Record permission</string>
    <string name="setup_recordpermission_text">&app_name; works by outputting audio through the timing circuit at right and recording the audio to detect changes when an object enters or exits a gate.\n\nRETRY to Allow Record Audio.\n\nIGNORE or Deny permission and &app_name; will be unable to function.</string>
    <string name="setup_storagepermission_title">Allow Access permission to files</string>
    <string name="setup_storagepermission_text">RETRY to Allow Access for &app_name; to access photos, media, and files on your device in order to save timing results to a CVS file.\n\nIGNORE and &app_name; will function without CVS file saving.</string>
    <string name="website">http://pages.iu.edu/~rwisman/MobileScience/GateTiming</string>
    <string name="level_label">Level</string>
    <string name="gate_label">Gate</string>
    <string name="run_label">Run &#8597;</string>
    <string name="time_label">Time &#8597;</string>
    <string name="rating_label">Rating</string>
    <string name="volume_label">Volume</string>
    <string name="power_label">Power</string>
    <string name="datetime_label">Date/UTC.ms</string>
    <string name="detectionresults_label">Detection Results</string>
    <string name="detectionresults_explanation">CANCEL - retry Detection\nOK - Start timing</string>
    <string name="detectionresults_recalibrate">Calibration</string>
    <string name="detectionresults_fail">RETRY after correcting gate\nillumination with Poor or Fail rating.</string>
    <string name="detectionresults_ok">OK to start timing.</string>
    <string name="calibrationresults_fail">RETRY after correcting gate illumination.</string>
    <string name="calibrationresults_ok">OK to continue.</string>
    <string name="calibrationresults_nocircuit">RETRY after connecting circuit - appears to be disconnected.</string>
    <string name="none">None</string>
    <string name="good">Good</string>
    <string name="poor">Poor</string>
    <string name="timingdetailed">Detailed list</string>
    <string name="abouttimelisting">Simple or detailed list</string>
</resources>